Add comment feature and tests

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,16 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
-    <div class="container text-center">
-        <h1>Search TV MAZE</h1>
-        <div class="row justify-content-start gap-4 shows">
+    <div class="container-fluid text-center app-wrapper">        
+        <div class="row d-flex flex-row mx-1 mt-3 justify-content-between gap-3 shows">
         
         </div>
         <span class="text-danger errorMessage"></span>
-        <ul class="like-value"></ul>
+
+        <footer class="position-fixed bottom-0 app-footer" >
+            Created by Microverse under the CC license
+        </footer>  
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.4.0/build/global/luxon.min.js"></script>
 </body>
 </html>
